# semester-thesis

./: .gitignore  .~lock.Results.ods#  README.md  Results for Plotting  Results.ods  test
CtS Test/Layer 1/: pose-iteration-log.csv
CtS Test/Layer 2/: pose-iteration-log.csv
CtS Test/Layer 3/: pose-iteration-log.csv
UrbanCity dataset/: extrinsics.txt  groundTruthPoseVel_imu.txt  imageLogs.txt  intrinsics.txt
UrbanCity dataset/depth/cam0/: 1.exr  10.exr  3.exr  8.exr  depth_map_2.csv  depth_map_4.csv  depth_map_5.csv  depth_map_6.csv  depth_map_7.csv  depth_map_9.csv
UrbanCity dataset/depth/cam1/: 1.exr  2.exr  3.exr  6.exr  7.exr  depth_map_10.csv  depth_map_4.csv  depth_map_5.csv  depth_map_8.csv  depth_map_9.csv
archive/: main.py
docker/: Dockerfile  README.md
neural_mesh_renderer/: .gitignore
neural_mesh_renderer-at_assert_fix/examples/: code.py  depth.txt  example5.py
neural_mesh_renderer-at_assert_fix/motion-blur-pose-estimation-via-mesh-rendering/: 3d_representation.py  image_generator.py  main.py  pointcloud.txt  polygon_mesh.off  pose-estimation.py  pose_estimation.py
neural_mesh_renderer-at_assert_fix/motion-blur-pose-estimation-via-mesh-rendering/cmd/: 3d_representation.py  pose_estimation.py
neural_mesh_renderer-at_assert_fix/motion-blur-pose-estimation-via-mesh-rendering/data/: pointcloudcpp.txt
neural_mesh_renderer-at_assert_fix/motion-blur-pose-estimation-via-mesh-rendering/lib/: dataset.py  framework.py  imagegeneration.py  meshgeneration.py  optimization.py  posetransformation.py  randomizer.py  renderer.py
neural_mesh_renderer-at_assert_fix/motion-blur-pose-estimation-via-mesh-rendering/test/: pose-estimation.py
neural_mesh_renderer-at_assert_fix/neural_renderer/: __init__.py  projection.py  projective_renderer.py  rasterize.py  torch_projective_renderer.py
neural_mesh_renderer-at_assert_fix/neural_renderer/cuda/: rasterize_cuda.cpp
neural_mesh_renderer/OBMBACPE/: 3d_representation.py  image_generator.py  pose_estimation.py
neural_mesh_renderer/OBMBACPE/lib/: dataset.py  framework.py  imagegeneration.py  meshgeneration.py  optimization.py  posetransformation.py  renderer.py
neural_mesh_renderer/examples/: code.py  depth.txt  example5.py
neural_mesh_renderer/neural_renderer/: projection.py
pose-estimator/: CMakeLists.txt  CPPLINT.cfg  README.md  cpplint.py
pose-estimator/cmd/: 3d-pointcloud.cpp  CMakeLists.txt  blur.cpp  coarse-to-sparse.cpp  pose-estimator.cpp  reproject.cpp
pose-estimator/lib/: CMakeLists.txt
pose-estimator/lib/posest/: blurrer.cpp  blurrer.h  dataset.cpp  dataset.h  executionparametrization.h  posest.h  reprojector.cpp  reprojector.h  solver.cpp  solver.h
pose-estimator/test/: CMakeLists.txt  blurrer_test.cpp  parametrization_test.cpp  reader_test.cpp  reprojector_test.cpp  solver_test.cpp  test_all.cpp  test_scale.cpp
report/: Results for Plotting  report.dvi  report.tex
